don't get fancy. use digest list for leaving set.